<resources>
    <string name="app_name">Group4F24</string>
    <string name="forget_password">forget password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="Username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="Password">Password</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="signup">Signup</string>
    <string name="Login">Login</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="log_out">log Out</string>
    <string name="Log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="verify">Verify</string>
    <string name="welcome_to_driveranalytics">Welcome To DriverAnalytics!</string>
    <string name="score">Score</string>
    <string name="average_overall_score">Average Overall Score</string>
</resources>