<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDC"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/socialicons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="13dp"
            android:src="@drawable/img" />

        <TextView
            android:id="@+id/registertitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_back"
            android:textColor="#000000"
            android:textSize="35sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:minHeight="48dp"
            android:background="@drawable/border"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="10dp"
            android:textColorHint="#686666"
            android:textSize="20sp" />


        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:minHeight="48dp"
            android:background="@drawable/border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="#686666"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/forget_password"
            android:layout_width="189dp"
            android:layout_height="48dp"
            android:hint="@string/forget_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="#686666"
            android:textSize="20sp"
            android:layout_marginStart="110dp"
            android:background="@null"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_screen"
            android:layout_width="201dp"
            android:layout_height="50dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/button_shape"
            android:text="@string/Login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:gravity="center"
                android:text="@string/don_t_have_an_account"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:gravity="center"
                android:text="@string/signup"
                android:textColor="#2A9AD7"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>