<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9EAFF"
    tools:context=".util.AccountInfoActivity">

    <View
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#02433A" />


    <ImageView
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="Back"
        android:layout_marginEnd="330dp"
        android:src="@drawable/ic_back" />

    <LinearLayout
        android:id="@+id/profile_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="33dp"
            android:src="@drawable/profile" />

        <TextView
            android:id="@+id/Account_Detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Account Detail"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Change_Username"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minHeight="48dp"
            android:background="@drawable/border"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="10dp"
            android:textColorHint="#686666"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/edit_Text_View"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_marginEnd="150dp"
            android:gravity="start"
            android:text="@string/edit"
            android:textColor="#FF0000"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/Email"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#686666"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/edit_Text_View2"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_marginEnd="150dp"
            android:gravity="start"
            android:text="@string/edit"
            android:textColor="#FF0000"
            android:textSize="16sp"/>


        <EditText
            android:id="@+id/Change_Password"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:minHeight="48dp"
            android:background="@drawable/border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="#686666"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/edit_Text_View3"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_marginEnd="150dp"
            android:gravity="start"
            android:text="@string/edit"
            android:textColor="#FF0000"
            android:textSize="16sp"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_changes"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/button_shape"
            android:text="Save Changes"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:layout_alignParentBottom="true"
            android:background="#02433A"
            app:itemIconTint="@null"
            app:labelVisibilityMode="labeled"
            app:itemTextAppearanceActive="@style/BottomNavigationTextStyle"
            app:itemTextAppearanceInactive="@style/BottomNavigationTextStyle"
            app:itemTextColor="@color/white"
            app:menu="@menu/botton_nav_menu" />




    </LinearLayout>

</RelativeLayout>